﻿                               ViSP
                     Visual Servoing Platform
                     Resume of the change log

     Copyright (C) 2005 - 2022 by Inria. All rights reserved.
                      https://visp.inria.fr

ViSP 3.5.1 (under development)
  - Contributors:
    . Fabien Spindler
  - New features and improvements
    . Video writer is now able to create the output folder recursively (see vpVideoWriter)
    . Introduce Universal Robots support with new vpRobotUniversalRobots class that
      allows to control an UR robot
    . Introduce Vicon and Qualisys motion capture system interfaces in vpMocapVicon and
      vpMocapQualisys respectively
    . Image-based and position-based examples with UR robot
    . Tutorial for extrinsic calibration improved with UR robot and Panda robot use cases
    . Tutorials in tutorial/grabber folder have now a new --no-display command line option
      that allows to grab a video remotely
  - Tutorials
    . New tutorial to list all the hardware (robot, camera, depth camera, lidar, mocap,
      haptic devices, F/T sensor) supported by ViSP
      https://visp-doc.inria.fr/doxygen/visp-daily/supported-material.html
    . New tutorial: How to manipulate a video or a sequence of images
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-video-manipulation.html
    . New tutorial: Planar object pose estimation using RGB-D data
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-planar-object-pose.html
    . New tutorial: IBVS with a robot from Universal Robots
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-universal-robot-ibvs.html
    . New tutorial: PBVS with a robot from Universal Robots
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-universal-robot-pbvs.html
  - Bug fixed
    . [#1042] testColorConversion.cpp segfault randomly
    . [#1045] CXX standard not propagated when using pkg-config or visp-config