@@ -1,4 +1,4 @@
-﻿                               ViSP
+                               ViSP
                      Visual Servoing Platform
                      Resume of the change log
 
@@ -36,6 +36,7 @@ ViSP 3.5.1 (under development)
     . [#1046] vpIoTools::getParent() returns an empty string when folder separator is not found
     . [#1059] 3.5.0: Build fails on FreeBSD arm64: fatal error: 'asm/hwcap.h' file not found
     . [#1077] Quick start build fails on Visual Studio 17 2022
+    . [#1080] Fails to configure with Xcode generator
 ----------------------------------------------
 ViSP 3.5.0 (released February 15, 2022)
   - Contributors:
